k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 60021
      targetPort: 60021
