k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
  labels:
    app: simple-app
    version: v1.2
spec:
  selector:
    matchLabels:
      app: simple-app
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: gbolo/sample-app:1.2
        ports:
        - containerPort: 60021
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 60021
      targetPort: 60021
