k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql

# I do not have the right for persistent volume
#        volumeMounts:
#        - name: mysql-persistent-storage
#          mountPath: /var/lib/mysql
#      volumes:
#      - name: mysql-persistent-storage
#        persistentVolumeClaim:
#          claimName: mysql-pv-claim
